# an-lise-de-futebol-AI-ML-com-YOLO-OpenCV-e-Python

./: pyproject.toml
