[tool.poetry]
name = "analise-de-futebol-ai-ml-com-yolo-opencv-e-python"
version = "0.1.0"
description = ""
authors = ["Claudio Rogerio <claudio.dior@yahoo.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
